--- a/src/components/Menu/StaggeredMenu.css
+++ b/src/components/Menu/StaggeredMenu.css
@@ -57,7 +57,7 @@
 }
 
 .sm-toggle:focus-visible {
-  outline: 2px solid #000000aa;
+  outline: 2px solid #000000;
   outline-offset: 4px;
   border-radius: 4px;
 }
